Implented Phase 4
Signed-off-by: Thomas Cooper <code@tomcooper.dev>